# WAHL-Index

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cpp  parse_result.py  run.sh  run_adaptive_exp.sh  run_all.sh  run_diff_max_error.sh
benchmark/: adaptive_experiment.cpp  alex_bench.cpp  art_bench.cpp  art_primary_lb.h  bench.cpp  btree_bench.cpp  diff_max_error_experiment.cpp  dpgm_bench.cpp  pgm_bench.cpp  tracking_allocator.h  util.h  zipf.h
benchmark/PGM-index/include/pgm/: pgm_index.hpp
benchmark/stx-btree-0.9/: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
benchmark/stx-btree-0.9/include/: Makefile.am  Makefile.in
benchmark/stx-btree-0.9/include/stx/: btree  btree.dox  btree.h  btree_map  btree_map.h  btree_multimap  btree_multimap.h  btree_multiset  btree_multiset.h  btree_set  btree_set.h
benchmark/stx-btree-0.9/memprofile/: Makefile.am  Makefile.in  README  main.cc  memprofile.gnuplot  memprofile.h
benchmark/stx-btree-0.9/memprofile/results-2013/: memprofile-btreemap.txt  memprofile-deque.txt  memprofile-hashmap.txt  memprofile-stdmap.txt  memprofile-unorderedmap.txt  memprofile-vector.txt
benchmark/stx-btree-0.9/scripts/: config.guess  config.sub
benchmark/stx-btree-0.9/speedtest/: Makefile.am  Makefile.in  README  speedtest-tune.cc  speedtest.cc  speedtest.gnuplot  transpose.awk
benchmark/stx-btree-0.9/speedtest/results-2007/: speed-all.trt  speed-all.txt  speed-find.trt  speed-find.txt  speed-insert.trt  speed-insert.txt  speedtest.gnuplot
benchmark/stx-btree-0.9/speedtest/results-2011/: speed-all.trt  speed-all.txt  (+5 more)
benchmark/stx-btree-0.9/testsuite/: BoundTest.cc  BulkLoadTest.cc  DumpRestoreTest.cc  InstantiationTest.cc  IteratorTest.cc  LargeTest.cc  Makefile.am  Makefile.in  README  RelationTest.cc  SimpleTest.cc  StructureTest.cc  tpunit.cc  tpunit.h
benchmark/stx-btree-0.9/wxbtreedemo/: Makefile.am  Makefile.in  README  WMain.cpp  WMain.h  WMain_wxg.cpp  WMain_wxg.h  WTreeDrawing.cpp  WTreeDrawing.h  manifest.xml  progicon.xpm  resources.rc  wxBTreeDemo.wxg
include/: art_tree.h  bucket.h  builder.h  common.h  global.cpp  segment.h  wahl_index.h
(+26 files in other folders)
